# flyto-indexer

./: --help  .dockerignore  .env.example  .flyto-bot-smoke.md  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  analyze.py  benchmark.py  index_all.py  mcp_config.example.json  pyproject.toml  run_mcp.sh
.flyto/: brief.md  descriptions.jsonl  flyto.json
.flyto/index/: summary.json
.flyto/nav/: map.json  tree.json
.flyto/tags/: symbol_tags.jsonl
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docker.yml  publish-pypi.yml  release.yml  security-scorecard.yml
.mcp/: server.json
benchmarks/: README.md  build_semgrep_baseline.py  semgrep_baseline.csv
config/: default.yaml  projects.yaml
config/rules/: scoring.yaml  security.yaml
examples/: audit_all.py  audit_incremental.py  demo.py  demo_audit.py  demo_qdrant.py  sync_all.py  test_dead_code.py  test_quality.py  test_stale_files.py
integrations/: cursor.md  flyto-engine.md  openai_gpts.md  vscode.md
scripts/: build.sh  github_action.yml  security_scorecard.sh
src/: __init__.py  api_server.py  bm25.py  cli.py  dependency_scanner.py  diff_impact.py  doc_scanner.py  dockerfile_scanner.py  dual_ai.py  engine.py  execution_guard.py  flyto_output.py  flyto_tags.py  framework_detector.py  git_secret_scanner.py  iac_scanner.py  index_store.py  license_scanner.py  mcp_server.py  models.py  project_profile.py  quality.py  resolver.py  rule_loader.py  safe_io.py  sbom_export.py  secret_scanner.py  semantic.py  session.py  signature.py  test_mapper.py  tool_registry.py  watcher.py
src/analyzer/: __init__.py  api_consistency.py  complexity.py  coverage.py  dead_code.py  duplicates.py  layers.py  rules.py  security.py  stale_files.py  taint.py  taint_rules.py  type_filter.py
src/auditor/: __init__.py  incremental_audit.py  llm_auditor.py  workflow.py
src/context/: loader.py
src/indexer/: __init__.py  incremental.py
src/lsp/: __init__.py  call_graph.py  client.py  protocol.py
src/mapper/: __init__.py  project_map.py  symbol_index.py
src/scanner/: __init__.py  base.py  go.py  java.py  python.py  rust.py  typescript.py  vue.py
src/store/: __init__.py  embedding.py  sync.py  vector.py
src/tools/: change_patterns.py  code_info.py  coverage_intel.py  git_intel.py  maintenance.py  references.py  resolver.py  search.py  smart.py  task_analysis.py  type_contracts.py
tests/: test_basic.py  test_cli_commands.py  test_complexity_analyzer.py  test_dual_ai.py  test_engine.py  test_flyto_tags.py  test_incremental.py  test_incremental_fuzz.py  test_lsp_mapper.py  test_mcp_integration.py  test_mcp_security.py  test_mcp_server.py  test_models.py  test_race_conditions.py  test_rules.py  test_safe_io.py  test_scanner_go.py  test_scanner_vue.py  test_semantic.py  test_session.py  test_smart.py  test_taint.py  test_task_analysis.py  test_tool_registry.py  test_type_contracts.py
tests/fixtures/: quality_matrix.py
tests/fixtures/vuln/: jwt_and_cors.py
