[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flyto-indexer"
version = "0.1.0"
description = "Code audit and smart indexing system for AI-assisted development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Flyto Team", email = "dev@flyto2.net" }
]
keywords = ["code-indexing", "ast", "ai", "development-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "requests>=2.28.0",  # HTTP 請求（Ollama）
]

[project.optional-dependencies]
vector = [
    "qdrant-client>=1.7.0",
    "openai>=1.0.0",
]
full = [
    "qdrant-client>=1.7.0",
    "openai>=1.0.0",
    "tqdm>=4.64.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
flyto-index = "flyto_indexer.cli:main"

[project.urls]
Homepage = "https://github.com/flytohub/flyto-indexer"
Documentation = "https://github.com/flytohub/flyto-indexer#readme"
Repository = "https://github.com/flytohub/flyto-indexer"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flyto_indexer"]

[tool.hatch.build]
sources = ["src"]

# 重新映射 src -> flyto_indexer
[tool.hatch.build.targets.wheel.sources]
"src" = "flyto_indexer"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
