[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flyto-indexer"
version = "1.0.2"
description = "Code intelligence MCP server for AI-assisted development — impact analysis, semantic search, and dependency graphs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Flyto Team", email = "dev@flyto2.net" }
]
keywords = ["code-indexing", "ast", "ai", "development-tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
flyto-index = "flyto_indexer.cli:main"

[project.urls]
Homepage = "https://github.com/flytohub/flyto-indexer"
Documentation = "https://github.com/flytohub/flyto-indexer#readme"
Repository = "https://github.com/flytohub/flyto-indexer"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Remap src/ -> flyto_indexer/ in the wheel
[tool.hatch.build.targets.wheel.sources]
"src" = "flyto_indexer"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = false
warn_return_any = false
disable_error_code = [
    "var-annotated",
    "no-redef",
    "index",
    "operator",
    "attr-defined",
    "union-attr",
    "arg-type",
    "assignment",
    "return-value",
    "list-item",
    "misc",
    "import-untyped",
]
